# parquet_to_json_example

./: .gitignore  README.md  pyproject.toml
parquet2json/: __main__.py
parquet2json/converter/: parquet_to_json.py
